# VisionModule

./: CMakeLists.txt  compile_commands.json  init_pwm.sh
libvideo/: ]  canny.cpp  canny.h  filedevice.cpp  imageprocessing.cpp  imageprocessing.h  pixel.cpp  pixel.h
src/: .motionservermain.cpp.swp  globals.h  httpd.cpp  httpd.h  httpdclientthread.cpp  httpdserverthread.cpp  main.cpp  motionclientmain.cpp  motionserver.cpp  motionserver.h  motionservermain.cpp  pwmport.cpp  pwmport.h  udpclient.h  videostream.cpp  videostream.h
submodules/motionclient/: CMakeLists.txt
submodules/motionclient/src/: motionclientmain.cpp
submodules/motionserver/: CMakeLists.txt
submodules/motionserver/src/: motionserver.h
submodules/visionclient/: CMakeLists.txt
www/: index.css  index.html  index.js  visionmodulecontroller.js
